--- a/spec/vcr/Movies_Facade/returns_searched_movies.yml
+++ b/spec/vcr/Movies_Facade/returns_searched_movies.yml
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 01 Dec 2021 00:01:39 GMT
+      - Wed, 01 Dec 2021 13:50:21 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -40,15 +40,13 @@ http_interactions:
       Vary:
       - Accept-Encoding
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 e89d8ce7f3f95990dceb161aeac4f899.cloudfront.net (CloudFront)
+      - 1.1 7d885ba806a1846198f8b666005bec93.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DFW55-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - fbKm4DeHES-PUF96eThFcr1tKHtP7IH7-SAtNvOEbQ6GrwMTC42ErA==
-      Age:
-      - '288'
+      - L5QoENzp00Uqf68gEqjisYTiMtcvR_rYnKjUxUjNyTSwBOljR9XN7A==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","genre_ids":[18,80],"id":278,"original_language":"en","original_title":"The
@@ -57,19 +55,19 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":52.637,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","release_date":"1994-09-23","title":"The
-        Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20197},{"adult":false,"backdrop_path":"/u6hgtSIzW8nDKKWmun9JDhZz2fp.jpg","genre_ids":[99],"id":546312,"original_language":"en","original_title":"Shawshank:
+        and unquenchable sense of hope.","popularity":55.946,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","release_date":"1994-09-23","title":"The
+        Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20203},{"adult":false,"backdrop_path":"/u6hgtSIzW8nDKKWmun9JDhZz2fp.jpg","genre_ids":[99],"id":546312,"original_language":"en","original_title":"Shawshank:
         The Redeeming Feature","overview":"Film critic and presenter Mark Kermode
         explores the fascination and praise audiences, fans and critics have behind
         the classic The Shawshank Redemption (1994) and how its importance grew higher
         over the years despite being an overlooked film when it was released and not
         getting any Oscars victories when it was nominated as one of the Best Pictures
-        of the Year.","popularity":1.335,"poster_path":"/b7DGM74MRfiLqEveVKwh0jnQ8zX.jpg","release_date":"2001-09-08","title":"Shawshank:
+        of the Year.","popularity":1.621,"poster_path":"/b7DGM74MRfiLqEveVKwh0jnQ8zX.jpg","release_date":"2001-09-08","title":"Shawshank:
         The Redeeming Feature","video":false,"vote_average":8.7,"vote_count":14},{"adult":false,"backdrop_path":null,"genre_ids":[],"id":897459,"original_language":"en","original_title":"Hope
         Springs Eternal: A Look Back at The Shawshank Redemption","overview":"Documentary
-        about the movie.","popularity":1.86,"poster_path":"/vdVab7yNvgYEMd8shCfy2D6nTMu.jpg","release_date":"2004-06-25","title":"Hope
+        about the movie.","popularity":1.28,"poster_path":"/vdVab7yNvgYEMd8shCfy2D6nTMu.jpg","release_date":"2004-06-25","title":"Hope
         Springs Eternal: A Look Back at The Shawshank Redemption","video":false,"vote_average":0,"vote_count":0}],"total_pages":1,"total_results":3}'
-  recorded_at: Wed, 01 Dec 2021 00:06:27 GMT
+  recorded_at: Wed, 01 Dec 2021 13:50:21 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/search/movie?api_key=<movie_api_key>&page=2&query=Shawshank
@@ -95,7 +93,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 01 Dec 2021 00:01:39 GMT
+      - Wed, 01 Dec 2021 13:50:22 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -110,17 +108,15 @@ http_interactions:
       Vary:
       - Accept-Encoding
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 aed14b36df96d4ec7e7cb3f8e4883525.cloudfront.net (CloudFront)
+      - 1.1 4d0ecb5905192435c3fd204705c9fc24.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DFW55-C3
+      - DEN50-C2
       X-Amz-Cf-Id:
-      - t6USp-vsbc3DWhcjP1StLw6iYilqIBDL-CDs7cHKWDSVhY67k43RUw==
-      Age:
-      - '288'
+      - P-voHWAnOmxFZzMr-H-qq5jg41nWrEcyaWzK1VCiqhe_FjeRsHSStQ==
     body:
       encoding: ASCII-8BIT
       string: '{"page":2,"results":[],"total_pages":1,"total_results":3}'
-  recorded_at: Wed, 01 Dec 2021 00:06:27 GMT
+  recorded_at: Wed, 01 Dec 2021 13:50:22 GMT
 recorded_with: VCR 6.0.0
