--- a/spec/vcr/Movies_Facade/returns_movie_by_id.yml
+++ b/spec/vcr/Movies_Facade/returns_movie_by_id.yml
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Wed, 01 Dec 2021 21:56:56 GMT
+      - Thu, 02 Dec 2021 15:49:11 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -42,21 +42,23 @@ http_interactions:
       X-Memc-Key:
       - 61ab33e7da6ffffeef140e858380738d178d3504
       X-Memc-Age:
-      - '676'
+      - '494'
       X-Memc-Expires:
-      - '15746'
+      - '15944'
       Etag:
-      - W/"7281296eddb743b5df556b2fc0c5b166"
+      - W/"a64c8a258b05d8aec1a864f3f2495312"
       Vary:
       - Accept-Encoding
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 dcee1124728af441beff75c95d9d9d74.cloudfront.net (CloudFront)
+      - 1.1 23241b9c368643949e3bb1a1ba4e97c3.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       X-Amz-Cf-Id:
-      - hPYuSZNs0DuI4JkyJkIFA9e6fKEes8ppexojPt4s1sReP-S7-Z2mKA==
+      - i4bLh6lICTwfCMVEnZjVDkC9dc6ZnfCEEA_EbFv01YjXEbDbCEixYQ==
+      Age:
+      - '275'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","belongs_to_collection":null,"budget":25000000,"genres":[{"id":18,"name":"Drama"},{"id":80,"name":"Crime"}],"homepage":"","id":278,"imdb_id":"tt0111161","original_language":"en","original_title":"The
@@ -65,9 +67,9 @@ http_interactions:
         at the Shawshank prison, where he puts his accounting skills to work for an
         amoral warden. During his long stretch in prison, Dufresne comes to be admired
         by the other inmates -- including an older prisoner named Red -- for his integrity
-        and unquenchable sense of hope.","popularity":55.946,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
+        and unquenchable sense of hope.","popularity":52.392,"poster_path":"/q6y0Go1tsGEsmtFryDOJo3dEmqu.jpg","production_companies":[{"id":97,"logo_path":"/7znWcbDd4PcJzJUlJxYqAlPPykp.png","name":"Castle
         Rock Entertainment","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1994-09-23","revenue":28341469,"runtime":142,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"}],"status":"Released","tagline":"Fear
-        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20209}'
-  recorded_at: Wed, 01 Dec 2021 21:56:56 GMT
+        can hold you prisoner. Hope can set you free.","title":"The Shawshank Redemption","video":false,"vote_average":8.7,"vote_count":20210}'
+  recorded_at: Thu, 02 Dec 2021 15:53:46 GMT
 recorded_with: VCR 6.0.0
