--- a/spec/vcr/Movies_Facade/returns_searched_movies.yml
+++ b/spec/vcr/Movies_Facade/returns_searched_movies.yml
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 02 Dec 2021 15:49:11 GMT
+      - Thu, 02 Dec 2021 22:57:08 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -40,15 +40,13 @@ http_interactions:
       Vary:
       - Accept-Encoding
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
       - 1.1 2ad801a60bd36fbeb6a62fab7eabe330.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       X-Amz-Cf-Id:
-      - yN74iaT5UzTIl4PdNjaM3qShiTdg29wrFDegQWSvt_w71InChuqqYQ==
-      Age:
-      - '275'
+      - fjbrzyS3J3vrXPIWaJbpweuBnxKmpyZ7uOoBQLxNayl0zJuyH5dgQw==
     body:
       encoding: ASCII-8BIT
       string: '{"page":1,"results":[{"adult":false,"backdrop_path":"/iNh3BivHyg5sQRPP1KOkzguEX0H.jpg","genre_ids":[18,80],"id":278,"original_language":"en","original_title":"The
@@ -69,7 +67,7 @@ http_interactions:
         Springs Eternal: A Look Back at The Shawshank Redemption","overview":"Documentary
         about the movie.","popularity":0.943,"poster_path":"/vdVab7yNvgYEMd8shCfy2D6nTMu.jpg","release_date":"2004-06-25","title":"Hope
         Springs Eternal: A Look Back at The Shawshank Redemption","video":false,"vote_average":0,"vote_count":0}],"total_pages":1,"total_results":3}'
-  recorded_at: Thu, 02 Dec 2021 15:53:46 GMT
+  recorded_at: Thu, 02 Dec 2021 22:57:08 GMT
 - request:
     method: get
     uri: https://api.themoviedb.org/3/search/movie?api_key=<movie_api_key>&page=2&query=Shawshank
@@ -95,7 +93,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Thu, 02 Dec 2021 15:49:11 GMT
+      - Thu, 02 Dec 2021 22:57:08 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -110,17 +108,15 @@ http_interactions:
       Vary:
       - Accept-Encoding
       X-Cache:
-      - Hit from cloudfront
+      - Miss from cloudfront
       Via:
-      - 1.1 dc50b0effd72a7b2c19bcb0909cfae82.cloudfront.net (CloudFront)
+      - 1.1 ce4b35590464ed34415a13badd946ebb.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DEN50-C2
       X-Amz-Cf-Id:
-      - _ATCzKmzCFTGPt6AgpQpQob-y3vxZXMf56dVZSIk8qTTzdWvB0geQg==
-      Age:
-      - '275'
+      - 2mzk3AuH0NWEtXzrpnL8h76pXCOC8LBR8QPCqC9F5RNchF2uz3IisA==
     body:
       encoding: ASCII-8BIT
       string: '{"page":2,"results":[],"total_pages":1,"total_results":3}'
-  recorded_at: Thu, 02 Dec 2021 15:53:46 GMT
+  recorded_at: Thu, 02 Dec 2021 22:57:08 GMT
 recorded_with: VCR 6.0.0
